--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -563,10 +563,11 @@ th { background:#f5f5f5; }
       <!-- TOTALS -->
       <div style="padding:15px;">
         <div class="totals">
-          <div class="total-box">Invoice<br>£{{ totals.Invoice|round(2) }}</div>
-          <div class="total-box">Charge<br>£{{ totals.Charge|round(2) }}</div>
-          <div class="total-box">Interest<br>£{{ totals.Interest|round(2) }}</div>
-          <div class="total-box">Payment<br>£{{ totals.Payment|round(2) }}</div>
+<div class="total-box">Invoice<br>{{ totals.Invoice|money }}</div>
+<div class="total-box">Charge<br>{{ totals.Charge|money }}</div>
+<div class="total-box">Interest<br>{{ totals.Interest|money }}</div>
+<div class="total-box">Payment<br>{{ totals.Payment|money }}</div>
+
         </div>
         <p class="balance">Balance: £{{ balance|round(2) }}</p>
       </div>
@@ -872,6 +873,7 @@ window.addEventListener('error', function(e) {
   
 </body>
 </html>
+
 
 
 
