--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Helm CRM by Redwood Collections</title>
+  <title>Harbour CRM by Redwood Collections</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="icon" href="/static/favicon.png" type="image/png">
 
@@ -875,6 +875,7 @@ window.addEventListener('error', function(e) {
   
 </body>
 </html>
+
 
 
 
