--- a/templates/client_dashboard.html
+++ b/templates/client_dashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Client Dashboard – Helm CRM by Redwood Collections</title>
+  <title>Harbour CRM by Redwood Collections</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="icon" href="/static/favicon.png" type="image/png">
   <style>
