--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Helm CRM - Login</title>
+  <title>Harbour CRM - Login</title>
   <link rel="icon" href="/static/favicon.png" type="image/png">
   <style>
     body { margin:0; font-family: Arial; background: #f9f9f9; display: flex; justify-content: center; align-items: center; height: 100vh; }
@@ -44,5 +44,6 @@
   </div>
 </body>
 </html>
+
 
 
